fix quaternary alignment

--- a/source/frontend/src/block/Latest/Latest.scss
+++ b/source/frontend/src/block/Latest/Latest.scss
@@ -20,6 +20,7 @@
 
 	.button {
 		margin-left: $sizeGrid * 2;
+		align-self: center;
 	}
 
 	.latest-articles {
